src_ships = files('AdvanceSupportFrigate.c',
                  'Carrier.c',
                  'CloakGenerator.c',
                  'DDDFrigate.c',
                  'DefaultShip.c',
                  'DefenseFighter.c',
                  'DFGFrigate.c',
                  'Drone.c',
                  'FloatingCity.c',
                  'GenericDefender.c',
                  'GenericInterceptor.c',
                  'GravWellGenerator.c',
                  'HeavyCorvette.c',
                  'HeavyCruiser.c',
                  'IonCannonFrigate.c',
                  'LightCorvette.c',
                  'MinelayerCorvette.c',
                  'MissileDestroyer.c',
                  'Mothership.c',
                  'MultiGunCorvette.c',
                  'P1IonArrayFrigate.c',
                  'P1MissileCorvette.c',
                  'P1Mothership.c',
                  'P1StandardCorvette.c',
                  'P2AdvanceSwarmer.c',
                  'P2FuelPod.c',
                  'P2Mothership.c',
                  'P2MultiBeamFrigate.c',
                  'P2Swarmer.c',
                  'P3StandardShip.c',
                  'Probe.c',
                  'ProximitySensor.c',
                  'RepairCorvette.c',
                  'ResearchShip.c',
                  'ResourceCollector.c',
                  'ResourceController.c',
                  'SalCapCorvette.c',
                  'SensorArray.c',
                  'StandardDestroyer.c',
                  'StandardFrigate.c')

inc_src_ships = include_directories('.')
