src_tools_polycount = files('main.c',
                            'file.c',
							'mex.c')

exe_tools_polycount = executable('polycount',
                                 build_by_default: false,
                                 c_args: c_args,
                                 sources: src_tools_polycount)
