exe_tools_x86_64 = []

exe_tools_x86_64 += executable('bank',
                               build_by_default: false,
                               include_directories: inc_src,
							   implicit_include_directories: true,
							   dependencies: dep_sdl,
							   c_args: c_args,
							   sources: ['bank.c', 'file.c'])

exe_tools_x86_64 += executable('fib',
                               build_by_default: false,
                               include_directories: inc_src,
							   implicit_include_directories: true,
							   dependencies: dep_sdl,
							   c_args: c_args,
							   sources: ['fib.c', 'file.c'])

exe_tools_x86_64 += executable('font',
                               build_by_default: false,
                               include_directories: inc_src,
							   implicit_include_directories: true,
							   dependencies: dep_sdl,
							   c_args: c_args,
							   sources: ['font.c', 'file.c'])

#exe_tools_x86_64 += executable('geo',
#                               include_directories: inc_src,
#							   implicit_include_directories: true,
#							   dependencies: dep_sdl,
#							   c_args: c_args,
#							   sources: ['geo.c', 'file.c'])

exe_tools_x86_64 += executable('lif',
                               build_by_default: false,
                               include_directories: inc_src,
							   implicit_include_directories: true,
							   dependencies: dep_sdl,
							   c_args: c_args,
							   sources: ['lif.c', 'file.c'])

exe_tools_x86_64 += executable('ll',
                               build_by_default: false,
                               include_directories: inc_src,
							   implicit_include_directories: true,
							   dependencies: dep_sdl,
							   c_args: c_args,
							   sources: ['ll.c', 'file.c'])

exe_tools_x86_64 += executable('mad',
                               build_by_default: false,
                               include_directories: inc_src,
							   implicit_include_directories: true,
							   dependencies: dep_sdl,
							   c_args: c_args,
							   sources: ['mad.c', 'file.c'])

exe_tools_x86_64 += executable('nis',
							   build_by_default: false,
                               include_directories: inc_src,
							   implicit_include_directories: true,
							   dependencies: dep_sdl,
							   c_args: c_args,
							   sources: ['nis.c', 'file.c'])

exe_tools += exe_tools_x86_64
